--- a/Android/app/src/main/res/layout/activity_gatt_nav.xml
+++ b/Android/app/src/main/res/layout/activity_gatt_nav.xml
@@ -73,4 +73,31 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/autocomplete_address" />
 
+    <TextView
+        android:id="@+id/connectedLbl"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="135dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginEnd="135dp"
+        android:gravity="center"
+        android:text="Display Not Connected"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/connectionStatusImg" />
+
+    <ImageView
+        android:id="@+id/connectionStatusImg"
+        android:layout_width="102dp"
+        android:layout_height="102dp"
+        android:layout_marginStart="161dp"
+        android:layout_marginTop="30dp"
+        android:layout_marginEnd="161dp"
+        android:layout_marginBottom="8dp"
+        android:src="@drawable/circle_red"
+        app:layout_constraintBottom_toTopOf="@+id/connectedLbl"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/youAreAtTxt" />
+
 </android.support.constraint.ConstraintLayout>
