--- a/Android/app/src/main/res/layout/activity_gatt_nav.xml
+++ b/Android/app/src/main/res/layout/activity_gatt_nav.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -82,7 +82,6 @@
         android:layout_marginTop="10dp"
         app:layout_constraintTop_toBottomOf="@id/goBtn"
         android:background="@color/quantum_black_divider"
-
         />
 
     <TextView
@@ -129,7 +128,36 @@
         app:layout_constraintTop_toTopOf="@id/displayStatusLbl"
         app:layout_constraintVertical_bias="0.5" />
 
+    <androidx.appcompat.widget.SwitchCompat
+        android:id="@+id/useGyroscopeSwitch"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="6dp"
+        android:layout_marginTop="24dp"
+        android:layout_marginEnd="317dp"
+        android:text="Use Gyroscope"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/connectionStatusImg" />
+    <TextView
+        android:id="@+id/navDataText"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        app:layout_constraintEnd_toStartOf="@id/compassNeedleImg"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/useGyroscopeSwitch" />
+    <ImageView
+        android:id="@+id/compassNeedleImg"
+        android:layout_width="80dp"
+        android:layout_height="80dp"
+        app:layout_constraintStart_toEndOf="@id/useGyroscopeSwitch"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="@id/useGyroscopeSwitch"
+        android:src="@drawable/compass_arrow"
+        android:backgroundTint="@color/quantum_black_100"
+        android:scaleType="fitCenter"
+        />
 
-
-
-</android.support.constraint.ConstraintLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
